--- a/src/views/login.html
+++ b/src/views/login.html
@@ -132,6 +132,12 @@
                 <input class="form-input" type="password" name="password" id="password" required="" placeholder="Contraseña" data-gtm-form-interact-field-id="3">
               </div>
             </form>
+            <div class="form-group" style="display: flex; align-items: center;width: 200px;">
+              <input style="margin-right: 5px;" type="checkbox" name="recordar" id="recordar" value="recordar">
+              <span style="font-size: 12px;">Mantenerme logeado</span>
+            </div>
+            
+
           </div>
           <div class="cta">
             <div>
