--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -78,9 +78,8 @@
   </div>
   <main>
     <div class="cont air-v">
-      <div class="breadcrumb">
-        <a href="/">HOME</a> <span class="sep"> /</span>
-        <h1>CARRITO</h1>
+      <div class="breadcrumb" style="color: blueviolet;font-size: 12px;">
+        <a href="/">HOME</a> <span class="sep"> /CARRITO</span>
       </div>
       <div role="alert" id="success" style="display:none"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Carrito actualizado</div>
       <div role="alert" id="enviogratis" style="display:none"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Envio gratis aplicado.</div>
