--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -77,7 +77,7 @@
     </div>
   </div>
   <main class="cont air-v">
-    <div class="breadcrumb" itemscope itemtype="http://schema.org/BreadcrumbList">
+    <div class="breadcrumb" style="color: blueviolet;font-size: 12px;">
         <a href="/" itemprop="itemListElement" typeof="ListItem">
             <span itemprop="item">
                 <span itemprop="name">HOME</span>
